# OmniGate

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  package.sh
.github/workflows/: release.yml
docs/: app.js  index.html  style.css
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_proxy.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models_discovery.rs
src-tauri/src/proxy/: balancer.rs  handlers.rs  mod.rs  models.rs  router.rs  server.rs
src/components/mcp/: McpDisplay.css  index.tsx
src/components/modals/: AddProviderModal.tsx  ConnectionModal.tsx  ImportPreviewModal.tsx  MappingModal.tsx  ProviderDetailsModal.tsx  PullModal.tsx
src/components/tabs/: ChatTestTab.tsx  ClientConfigTab.tsx  ConfigFilesTab.tsx  GlobalPromptsTab.tsx  OverviewTab.tsx  ProvidersTab.tsx  SettingsTab.tsx  SkillsTab.tsx
